# omniscribe

./: .gitignore  CLAUDE.md  install-service.bat  install-startup.bat  package.json  start.bat
PRD/: OmniScribe_PRD_v1.docx
apps/daemon/: .env.example  pyproject.toml
apps/daemon/omniscribe_daemon/: __init__.py  config.py  main.py
apps/daemon/omniscribe_daemon/api/: server.py
apps/daemon/omniscribe_daemon/audio/: capture.py  detector.py  monitor.py  recorder.py  vad.py
apps/daemon/omniscribe_daemon/session/: manager.py  types.py
apps/daemon/omniscribe_daemon/storage/: sqlite_store.py  supabase_sync.py
apps/daemon/omniscribe_daemon/transcription/: diarize.py  engine.py  groq_fallback.py
apps/mcp-server/: .env.example  Dockerfile  package.json
apps/mcp-server/src/: index.ts
apps/mcp-server/src/db/: client.ts  embeddings.ts  queries.ts
apps/mcp-server/src/tools/: insights.ts  meetings.ts  notes.ts  search.ts  sessions.ts  transcripts.ts
apps/tray/: electron-builder.yml  launch.bat  package.json  tsconfig.electron.json  tsconfig.renderer.json
apps/tray/assets/: README.md
apps/tray/electron/: daemon.ts  ipc.ts  main.ts  preload.ts  tray.ts
apps/tray/src/: index.html
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: SearchBar.tsx  SessionCard.tsx  TranscriptViewer.tsx
docs/: CHANGELOG.md  claude-desktop-config.md
infra/: railway.toml  vercel.json
supabase/: config.toml
supabase/migrations/: 20260317000001_initial_schema.sql  20260317000002_pgvector.sql  20260317000003_rls_policies.sql
(+4 files in other folders)
